# ai-experiments

mcp-agent-experiment/: .env.backup  DOCKER_REMOTE_SETUP.md  README.md  README_POSTGRES.md  REMOTE_CONNECTION_GUIDE.md  SCHEMA_CONFIGURATION.md  agent_postgres_docker.py  agent_postgres_pro.py  app_postgres_pro.py  configure_schema.sh  docker-compose.yml  env.example  env.postgres.example  init.sql  llm_model.py  pyproject.toml  setup_postgres.sh  setup_remote_env.sh  test_connection.py  test_remote_connection.py
